syntax = "proto3";

option go_package = "github.com/sithell/perun/provider/pb";

package provider;

service Provider {
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc RunContainer(RunContainerParams) returns (ContainerInfo) {}
}

message PingRequest {}
message PingResponse {}

message RunContainerParams {
  string image = 1;
  repeated string cmd = 2;
}

message ContainerInfo {
  string id = 1;
}
